[package]
name = "learn-rust-3"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "collections"
path ="src/Collections/collections.rs"

[[bin]]
name = "string"
path ="src/Collections/StringsC.rs"

[[bin]]
name = "hashmap"
path ="src/Collections/hashMaps.rs"

[[bin]]
name = "problem1"
path ="src/Collections/problem1.rs"

[[bin]]
name = "error1"
path ="src/Tests/udemy1.rs"

[[bin]]
name = "errorb1"
path ="src/Tests/book1.rs"

[[bin]]
name = "propagation"
path ="src/Tests/propagation.rs"